--- a/stirling-engine/entry11/entry11.html
+++ b/stirling-engine/entry11/entry11.html
@@ -55,6 +55,8 @@
                     <br>
                     The best solution for this problem is to buy a new piston seal. This time, I’ve decided to get a rubber o-ring to act as the seal so that it can squeeze into the chamber, even if it is a little oversized. This new o-ring will have a round profile, so there shouldn’t be too much friction between it and the chamber walls — it’s a seal made for dynamic motion like this. I’ve ordered it already, and it should be here soon. In the meantime, I’ll continue machining and assembling the remaining parts.<br>
                     <br>
+                    Since the new piston head will be thinner than the old one, the piston cylinder’s maximum length has changed slightly. I’ve updated the Desmos graph in post 8 to reflect this.
+                    <br>
                     Update: The o-ring arrived! This already looks like it should work better than the old seal.
                 </div>
             </div>
