--- a/stirling-engine/entry9/entry9.html
+++ b/stirling-engine/entry9/entry9.html
@@ -116,7 +116,7 @@
                     </div>
                     <br>
                     This Desmos graph can be found here:
-                    <a href="https://www.desmos.com/calculator/ytfh0riagi" class="list-primary">https://www.desmos.com/calculator/ytfh0riagi</a>
+                    <a href="https://www.desmos.com/calculator/gakv9ysnx3" class="list-primary">https://www.desmos.com/calculator/gakv9ysnx3</a>
                     <br>
                     I also want to briefly touch on the mechanical design of this engine. All custom components are to be made out of Lexan (the type of plastic I mentioned in a previous post). I will cut these pieces myself on my mini CNC router. All of the other parts in this engine are from McMaster-Carr, the industrial hardware shop I mentioned in earlier posts, and from a local metal store called Metal Supermarkets.<br>
                     <br>
@@ -124,7 +124,7 @@
                     <br>
                     Three steel round tubes are from Metal Supermarkets — these make up the two piston cylinder walls, and the flywheel mass. The tube that is the flywheel mass has a wider diameter than the two piston cylinder tubes. Initially, I wanted to order aluminum equivalents of these tubes from McMaster-Carr, but there were exorbitantly high duties on them since they’re coming from the US, and so I settled for these steel tubes instead. Although steel may be harder to support due to its higher density and extra weight, a steel mass will give the flywheel a much higher moment of inertia, which could be a good thing. Each of these steel tubes are held in place between two sheets of Lexan, and they each have a few standoffs tangent to their surface that secure them in place to prevent movement, while also clamping their ends to the Lexan sheets.<br>
                     <br>
-                    The flywheel contains two bearings, which allow it to rotate on a fixed standoff. This standoff passes through a supporting plate made of Lexan to help keep it stable.<br>
+                    The flywheel’s mass is distributed close to its edge to maximize its rotational inertia. The flywheel also contains two bearings, which allow it to rotate on a fixed standoff. This standoff passes through a supporting plate made of Lexan to help keep it stable.<br>
                     <br>
                     The piston heads contain an airtight sealing ring which is sandwiched between pieces of Lexan. Each piston head has an eye bolt running through it that connects the piston head to a piston rod. On the other end, each piston rod is attached to a single standoff on the flywheel located a distance \(f\) from the center of the flywheel.
                     <br>
