--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#entries9-12">9-12</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#entries9-12">13-16</a>
+            </li>
         </ul>
     </nav>
     <div class="p-5"></div>
@@ -165,6 +168,32 @@
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 11: Progress and Setbacks
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry12/entry12.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry12/entry12ImgTitle.jpg" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 12: Kickstart
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row pb-5" id="entries13-16">
+            <div class="col-md-3 px-4">
+                <a href="entry13/entry13.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry13/entry13ImgTitle.jpg" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 13: Worth a Shot
                         </div>
                     </div>
                 </a>
