Entry 14 creation + video upload

--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -13,11 +13,11 @@
 
     <link href="style.css", rel="stylesheet">
 
-    <title>The Stirling Engine Project</title>
+    <title>Stirling Engine Physics</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="#">The Stirling Engine Project</a>
+        <a class="navbar-brand" href="#">Stirling Engine Physics</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#entries1-4">1-4</a>
@@ -34,6 +34,9 @@
         </ul>
     </nav>
     <div class="p-5"></div>
+    <center>
+        <iframe class="my-5" width="896" height="504" src="https://www.youtube.com/embed/RrhjSpAG-48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
     <div class="container-fluid p-5 min-vh-100">
         <div class="row pb-5" id="entries1-4">
             <div class="col-md-3 px-4">
@@ -194,6 +197,18 @@
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 13: Worth a Shot
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry14/entry14.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry14/entry14ImgTitle.jpg" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 14: Notice of Resignation
                         </div>
                     </div>
                 </a>
