--- a/stirling-engine/entry8/entry8.html
+++ b/stirling-engine/entry8/entry8.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="../index.html">The Stirling Engine Project</a>
+        <a class="navbar-brand" href="../index.html">Stirling Engine Physics</a>
     </nav>
     <div class="p-5"></div>
     <div class="container-fluid pt-5">
