--- a/stirling-engine/entry12/entry12.html
+++ b/stirling-engine/entry12/entry12.html
@@ -47,7 +47,7 @@
                     <br>
                     This gives me a rotational velocity of 146.4 rad/s! Yikes! That translates to approximately 23.29 revolutions per second! I don’t think my hand can move that fast, so this seems like a job for a drill. The average drill runs at about 1500 RPM, which translates to about 25 revolutions per second. Hopefully that’s enough of a margin to work with. In reality, the required rotational velocity might be a bit lower than 23.29 revolutions per second since the flywheel as a whole is heavier than just the mass ring, which may help a bit.<br>
                     <br>
-                    Footnote: If I’m going to be using a drill to kickstart the flywheel anyways, this initial velocity value doesn’t matter too much — instead, I can just use the drill to continue to supply the flywheel with extra energy, until the engine is producing enough power to keep itself running.
+                    <i>Footnote: If I’m going to be using a drill to kickstart the flywheel anyways, this initial velocity value doesn’t matter too much — instead, I can just use the drill to continue to supply the flywheel with extra energy, until the engine is producing enough power to keep itself running.</i>
                 </div>
             </div>
         </div>
