--- a/stirling-engine/entry14/entry14.html
+++ b/stirling-engine/entry14/entry14.html
@@ -51,9 +51,13 @@
                     <br>
                     I’ve gone ahead and finished assembling the rest of the engine, sans the piston seals. I may not have a functional engine, but I do have a functional engine model. Mechanically, it moves in an identical manner to a working Stirling engine — however it consumes energy to remain in motion, rather than producing it. I’ve tried powering the flywheel with a drill, and mechanically the engine holds up — which helps me believe that if I had been able to fix the seal problem, this engine might’ve actually worked.<br>
                     <br>
-                    In the end, even though I don't have a working Stirling engine, I think this project has been a success overall — my theoretical model turned out really well, and I got to experience the entire design process; iterating over my design multiple times to try and get it to work. I may or may not have been able to fix the engine's mechanical issues if I had more time, but in the end, it's the journey that counts and I think I've had a good run with this project.<br>
+                    In the end, even though I don't have a working Stirling engine, I think this project has been a success overall — my <a href="https://www.desmos.com/calculator/o44oq3fzup" class="link-primary">theoretical model</a> turned out really well, and I got to experience the entire <a href="../entry9/entry9.html" class="link-primary">design process</a>; <a href="../entry10/entry10.html" class="link-primary">iterating</a> over my design <a href="../entry13/entry13.html" class="link-primary">multiple times</a> to try and get it to work.<br>
                     <br>
-                    That’s the end of these blog posts — watch out for my final summary video, coming out soon!
+                    I think going for an engine of this scale might have been overambitious as well — if I had gone for a smaller design using premade parts such as syringes, things might have turned out better in the end. I may or may not have been able to fix this engine's mechanical issues if I had more time, but in the end, it's the journey that counts and I think I've had a good run with this project.<br>
+                    <br>
+                    That’s the end of these blog posts — watch out for my final summary video, coming out soon!<br>
+                    <br>
+                    <i>Footnote: Turns out this isn't actually my last blog post — check out my machining montage in the next one!</i>
                 </div>
             </div>
         </div>
