--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -213,6 +213,18 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-3 px-4">
+                <a href="entry15/entry15.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry15/entry15ImgTitle.png" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 15: Machining Montage
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <div class="p-3 bg-dark text-light"></div>
