--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       </head>
       <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-            <a class="navbar-brand" href="#">Hello!</a>
+            <a class="navbar-brand" href="#">Directory</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="stirling-engine/index.html">Stirling Engine</a>
+                    <a class="nav-link" href="stirling-engine/index.html">Web Resume</a>
+                    <a class="nav-link" href="web-resume/index.html">Stirling Engine</a>
                 </li>
             </ul>
         </nav>
