--- a/web-resume/index.html
+++ b/web-resume/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="#">Stirling Engine Physics</a>
+        <a class="navbar-brand" href="#">Web Resume</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#entries1-4">1-4</a>
