--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a class="navbar-brand" href="#">Directory</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="stirling-engine/index.html">Web Resume</a>
-                    <a class="nav-link" href="web-resume/index.html">Stirling Engine</a>
+                    <a class="nav-link" href="resume/index.html">Web Resume</a>
+                    <a class="nav-link" href="stirling-engine/index.html">Stirling Engine</a>
                 </li>
             </ul>
         </nav>
