First draft corrections

--- a/resume/index.html
+++ b/resume/index.html
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div class="col" style="text-align: center">
-                <img src="images/casual_headshot.jpg" class="px-2 pt-5" style="width: 65%"/>
+                <img src="images/headshot.png" class="px-2 pt-5" style="width: 65%"/>
             </div>
         </div>
         <div class="row pb-5" id="Education">
@@ -87,7 +87,7 @@
             <ul class="exp-list">
                 <li>Head mentor/previous member of a ~10 member high school robotics team which designs a robot every year using VEX COTS parts to compete in a sports-like game with other robots</li>
                 <li>Responsibilities include teaching technical skills (eg. Solidworks, C++, part machining), guiding the team's design process, and providing technical expertise when problems are encountered</li>
-                <li>Have taught engineering design concepts/tools such as requirement models and Pugh charts - arguably, this has somewhat led to the team's success in winning awards at competition for their design process</li>
+                <li>Have taught engineering design concepts/tools such as requirement models and Pugh charts - arguably, this has somewhat led to the team's success in winning Design awards at competition</li>
             </ul>
             <h5 class="exp-title">ESROP Global (KMUTT) Summer Research Student</h5><br>
             <h6 class="subtitle">May 2022 - Aug 2022</h6><br>
@@ -106,7 +106,7 @@
                 <li>On the liquid propulsion subteam, designed a fuel injector for the team's pintle engine - this design underwent cold flow testing and performed better than the existing pintle design</li>
                 <li>On the liquid propulsion subteam, conducted an O-Ring selection study to seal components of the injector from each other and the engine nozzle</li>
                 <li>Currently on a joint avionics/aerodynamics group developing new technologies for improved control during flight</li>
-                <li>Assembled a launch ready Tripoli L1 class rocket for individual certification, unfortunately could not launch due to range conditions on the day of launch</li>
+                <li>Assembled a launch ready Tripoli L1 class rocket for individual certification</li>
             </ul>
             <h5 class="exp-title">UofT Aerospace Team (UTAT) - Space Systems (CubeSat) Member - Firmware</h5><br>
             <h6 class="subtitle">May 2023 - Present</h6><br>
@@ -189,23 +189,23 @@
                 <li>This to-do list is organized so that the earliest due tasks appear first, with their colour indicating their importance (mark-distribution wise)</li>
                 <li>As tasks are completed, they can be marked off of the sheet, which removes them from the to-do list</li>
                 <li>When marks are released for assignments, they can be added to the sheet to compute per-course marks to-date and projected marks</li>
-                <li>Distributed this sheet to many peers, some of whom still use it on a daily basis</li>
+                <li>Distributed this sheet to my peers, some of whom still use it on a daily basis</li>
                 <li>A copy of this sheet is available <a href="https://docs.google.com/spreadsheets/d/1cuyW7LI9dmoxicCpK9B3y6QaDIcsJP_Drw5CEeto3so/edit?usp=sharing">here</a></li>
             </ul>
+            <h5 class="exp-title">IoT Lights</h5><br>
+            <h6 class="subtitle">June 2023</h6><br>
+            <ul class="exp-list">
+                <li>For a birthday gift, created sets of RGB lights that pull from the Internet to remain synced to the same colour</li>
+                <li>Used Raspberry Pi Picos to periodically pull data from a private Discord server as a POST request, then set pinouts to make lights the correct colour</li>
+                <li>User control is via Discord - any messages sent in the private Discord server are taken as commands by the Picos</li>
+                <li>Each Pico and light pair was soldered together to form a single, standalone IoT device</li>
+            </ul>
             <h5 class="exp-title">Bridge Calculator</h5><br>
-            <h6 class="subtitle">Dec 2021</h6><br>
+            <h6 class="subtitle">Nov 2021</h6><br>
             <ul class="exp-list">
                 <li>Developed a Python program to (approximately) calculate the loads present on a hybrid truss/beam bridge</li>
                 <li>This was for a bridge design project in my first year Civil Engineering course, but this program went above and beyond by being able to calculate the loads on any arbitrary system of truss members</li>
                 <li>My team used this program to design an optimal bridge, then constructed it out of matboard and tested to failure</li>
-            </ul>
-            <h5 class="exp-title">IoT Lights</h5><br>
-            <h6 class="subtitle">Dec 2021</h6><br>
-            <ul class="exp-list">
-                <li>For a birthday gift, created a set of 2 RGB lights that pull from the Internet to remain synced to the same colour</li>
-                <li>Used Raspberry Pi Picos to periodically pull data from a private Discord server as a POST request, then set pinouts to make lights the correct colour</li>
-                <li>User control is via Discord - any messages sent in the private Discord server are taken as commands by the Picos</li>
-                <li>Picos and lights were soldered together to form a single, standalone IoT device</li>
             </ul>
         </div>
         <div class="row pb-5" id="Achievements">
