--- a/resume/index.html
+++ b/resume/index.html
@@ -72,6 +72,38 @@
         </div>
         <div class="row pb-5" id="Work-Exp">
             <h3><strong> Work Experience </strong></h3><hr>
+            <div class="d-flex justify-content-center carousel-wrapper">
+                <div id="Work-Exp-Indicators" class="carousel slide w-50" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Work-Exp-1.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Work-Exp-2.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Work-Exp-3.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Work-Exp-4.jpg" class="d-block w-100">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
             <h5 class="exp-title">Autonomous Space Robotics Laboratory (UTIAS) Summer Research Student</h5><br>
             <h6 class="subtitle">May 2023 - Aug 2023</h6><br>
             <ul class="exp-list">
@@ -99,6 +131,46 @@
         </div>
         <div class="row pb-5" id="Design-Team-Exp">
             <h3><strong> Design Team Experience </strong></h3><hr>
+            <div class="d-flex justify-content-center carousel-wrapper">
+                <div id="Design-Team-Exp-Indicators" class="carousel slide w-50" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide-to="5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Design-Team-Exp-1.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Design-Team-Exp-2.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Design-Team-Exp-3.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Design-Team-Exp-4.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Design-Team-Exp-5.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Design-Team-Exp-6.jpg" class="d-block w-100">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#Design-Team-Exp-Indicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
             <h5 class="exp-title">UofT Aerospace Team (UTAT) - Rocketry Member - Liquid Propulsion / Avionics + Aerodynamics</h5><br>
             <h6 class="subtitle">Aug 2022 - Present</h6><br>
             <ul class="exp-list">
@@ -134,6 +206,42 @@
         </div>
         <div class="row pb-5" id="Projects">
             <h3><strong> Personal Projects </strong></h3><hr>
+            <div class="d-flex justify-content-center carousel-wrapper">
+                <div id="Projects-Indicators" class="carousel slide w-50" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Projects-1.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Projects-2.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Projects-3.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Projects-4.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Projects-5.jpg" class="d-block w-100">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#Projects-Indicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#Projects-Indicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
             <h5 class="exp-title">Holonomic Pure Pursuit Simulator</h5><br>
             <h6 class="subtitle">Jan 2021</h6><br>
             <ul class="exp-list">
