--- a/resume/index.html
+++ b/resume/index.html
@@ -184,8 +184,8 @@
             <h6 class="subtitle">May 2023 - Present</h6><br>
             <ul class="exp-list">
                 <li>Member of the firmware subteam, which writes flight code for the team's 3U CubeSat</li>
-                <li>Responsible for implementing a CAN handler for communication between separate onboard microcontrollers</li>
-                <li>Also researching multi-level watchdog implementations to ensure safety of running tasks</li>
+                <li>Worked on a CAN handler for communication between separate onboard microcontrollers</li>
+                <li>Drafting a framework for software based watchdogs to safeguard against program crashes in orbit</li>
             </ul>
             <h5 class="exp-title">FIRST Robotics Competition (FRC) Team 4308 - Team Co-Captain & Design Lead</h5><br>
             <h6 class="subtitle">Sept 2017 - June 2021</h6><br>
