Minor content updates

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,10 @@
             <div class="col-8">
                 <h3><strong> About </strong></h3><hr>
                 <p>
-                Welcome to my web resume! My name is Nikhil and I'm a 3rd year Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I enjoy learning new things, am very adaptable, and have past work experience in formal lab settings. I've worked on numerous deadline-driven design teams in the past, so I've developed the valuable skill of working with others toward a common goal under time pressure. These environments have also led me to develop solid communication and time management skills. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains. <br><br>
+                <strong>Welcome to my web resume! This website is <strong class="text-primary">custom made</strong> from scratch using HTML, CSS, and Bootstrap.</strong>
+                </p>
+                <p>
+                My name is Nikhil and I'm a 3rd year Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I enjoy learning new things, am very adaptable, and have past work experience in formal lab settings. I've worked on numerous deadline-driven design teams in the past, so I've developed the valuable skill of working with others toward a common goal under time pressure. These environments have also led me to develop solid communication and time management skills. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains. <br><br>
                 
                 This site is intended to serve as a supplement to my resume. It contains information that I simply didn't have enough space to fit in my resume, but that I still feel is important enough to talk about somwehere. Be sure to add me on LinkedIn, and take a look at my GitHub for examples of the (public) code I've written in the past!
                 </p>
@@ -53,7 +56,7 @@
                 </p>
             </div>
             <div class="col" style="text-align: center">
-                <img src="images/headshot.png" class="px-2 pt-5" style="width: 65%"/>
+                <img src="images/headshot.png" class="px-2 pt-5" style="width: 70%"/>
             </div>
         </div>
         <div class="row pb-5" id="Education">
@@ -67,7 +70,7 @@
             </p>
             <p>
             <strong>cGPA:</strong> 3.98 / 4.00<br>
-            Recieved the Anthony A. Haasz Scholarship
+            Recipent of the Anthony A. Haasz Scholarship
             </p>
         </div>
         <div class="row pb-5" id="Work-Exp">
@@ -263,7 +266,7 @@
             <ul class="exp-list">
                 <li><i>Motivation</i> <br>
                     <ul class="exp-sublist">
-                        <li>When assembling mechanisms for VRC (see <a href="#Design-Team-Exp">VRC</a>), misalignment in the assembly of VEX COTS parts can lead to flimsiness or a drop in performance (usually due to friction)</li>
+                        <li>When assembling mechanisms for VRC (see <a href="#Design-Team-Exp">VRC</a>), improper spacing in the assembly of VEX COTS parts can lead to flimsiness or a drop in performance (usually due to friction)</li>
                         <li>This is normally aleviated by using CAD software (ie. Solidworks) to plan out the relative spacing of each part, but that is unwieldy when rapidly prototyping to test design ideas</li>
                         <li>This leads to prototypes being flimsy/inefficient, which provides a skewed understanding of design ideas</li>
                     </ul>
@@ -286,7 +289,7 @@
                 <li>Wrote another Python program to take in an individual's timetable as a CSV, and filter it against the JSON to provide a list of courses with no scheduling conflicts</li>
                 <li>For my schedule, this process narrowed down my list of possible courses from 742 to 29</li>
                 <li>Distributed the JSON and filtering program to my peers</li>
-                <li>Unfortunately, within a few days the scraping script stopped working, as UofT made their course info website inaccessible to Selenium bots - possibly as a result of my script's abuse :)</li>
+                <li>Unfortunately, within a few days UofT made their course info website inaccessible to Selenium bots, possibly as a result of my script's abuse - as a result this script is no longer functional</li>
             </ul>
             <h5 class="exp-title">Schoolwork Management Spreadsheet</h5><br>
             <h6 class="subtitle">Dec 2021</h6><br>
