Minor content updates

--- a/resume/index.html
+++ b/resume/index.html
@@ -174,21 +174,20 @@
                     </button>
                 </div>
             </div>
-            <h5 class="exp-title">UofT Aerospace Team (UTAT) - Rocketry Member - Liquid Propulsion / Avionics + Aerodynamics</h5><br>
-            <h6 class="subtitle">Aug 2022 - Present</h6><br>
-            <ul class="exp-list">
-                <li>Was previously a member of the liquid propulsion subteam, and am now a member of a joint avionics/aerodynamics project</li>
-                <li>On the liquid propulsion subteam, designed a fuel injector for the team's pintle engine - this design underwent cold flow testing and performed better than the existing pintle design</li>
-                <li>On the liquid propulsion subteam, conducted an O-Ring selection study to seal components of the injector from each other and the engine nozzle</li>
-                <li>Currently on a joint avionics/aerodynamics group developing new technologies for improved control during flight</li>
-                <li>Assembled a launch ready Tripoli L1 class rocket for individual certification</li>
-            </ul>
             <h5 class="exp-title">UofT Aerospace Team (UTAT) - Space Systems (CubeSat) Member - Firmware</h5><br>
             <h6 class="subtitle">May 2023 - Present</h6><br>
             <ul class="exp-list">
                 <li>Member of the firmware subteam, which writes flight code for the team's 3U CubeSat</li>
                 <li>Worked on a CAN handler for communication between separate onboard microcontrollers</li>
                 <li>Drafting a framework for software based watchdogs to safeguard against program crashes in orbit</li>
+            </ul>
+            <h5 class="exp-title">UofT Aerospace Team (UTAT) - Rocketry Member - Liquid Propulsion</h5><br>
+            <h6 class="subtitle">Aug 2022 - Dec 2023</h6><br>
+            <ul class="exp-list">
+                <li></li>
+                <li>On the liquid propulsion subteam, designed a fuel injector for the team's pintle engine - this design underwent cold flow testing and performed better than the existing pintle design</li>
+                <li>Conducted an O-Ring selection study to seal components of the injector from each other and the engine nozzle</li>
+                <li>Assembled a launch ready Tripoli L1 class rocket for individual certification, and travlelled to upstate New York for launch</li>
             </ul>
             <h5 class="exp-title">FIRST Robotics Competition (FRC) Team 4308 - Team Co-Captain & Design Lead</h5><br>
             <h6 class="subtitle">Sept 2017 - June 2021</h6><br>
