Added stirling engine to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -215,6 +215,7 @@
                     <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="2"></button>
                     <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="3"></button>
                     <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#Projects-Indicators" data-bs-slide-to="5"></button>
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -232,6 +233,9 @@
                     <div class="carousel-item">
                         <img src="images/Projects-5.jpg" class="d-block w-100">
                     </div>
+                    <div class="carousel-item">
+                        <img src="images/Projects-6.jpg" class="d-block w-100">
+                    </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#Projects-Indicators" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -243,6 +247,15 @@
                     </button>
                 </div>
             </div>
+            <h5 class="exp-title">Stirling Engine</h5><br>
+            <h6 class="subtitle">Jan 2021</h6><br>
+            <ul class="exp-list">
+                <li>During COVID, attempted to design a functional Stirling Engine as a physics project</li>
+                <li>Determined physical constraints, and developed a mathematical model to aid in choosing physical parameters</li>
+                <li>Used Solidworks to CAD the engine, then ordered parts and constructed it</li>
+                <li>Unfortunately, the engine ran into frictional issues that could not be easily overcome without additional spending on parts</li>
+                <li>All of this was done for a physics class, and I documented every step, available <a href="https://nthiyag.github.io/stirling-engine/">here</a></li>
+            </ul>
             <h5 class="exp-title">Holonomic Pure Pursuit Simulator</h5><br>
             <h6 class="subtitle">Jan 2021</h6><br>
             <ul class="exp-list">
