--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
             <div class="col-8">
                 <h3><strong> About </strong></h3><hr>
                 <p>
-                <strong>Welcome to my web resume! This website is <strong class="text-primary">custom made</strong> from scratch using HTML, CSS, and Bootstrap.</strong>
+                <strong>Welcome to my personal portfolio! This website is <strong class="text-primary">custom made</strong> from scratch using HTML, CSS, and Bootstrap.</strong>
                 </p>
                 <p>
                 My name is Nikhil and I'm a 3rd year Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I enjoy learning new things, am very adaptable, and have past work experience in formal lab settings. I've worked on numerous deadline-driven design teams in the past, so I've developed the valuable skill of working with others toward a common goal under time pressure. These environments have also led me to develop solid communication and time management skills. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains. <br><br>
