--- a/resume/index.html
+++ b/resume/index.html
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="col" style="text-align: center">
-                <img src="images/headshot.png" class="px-2 pt-5" style="width: 70%"/>
+                <img src="images/casual_headshot.png" class="px-2 pt-5" style="width: 70%"/>
             </div>
         </div>
         <div class="row pb-5" id="Education">
