--- a/resume/index.html
+++ b/resume/index.html
@@ -42,12 +42,12 @@
             <div class="col-8">
                 <h3><strong> About </strong></h3><hr>
                 <p>
-                <strong>Welcome to my personal portfolio! This website is <strong class="text-primary">custom made</strong> from scratch using HTML, CSS, and Bootstrap.</strong>
+                <strong>Welcome to my personal portfolio! This website is <strong class="text-primary">custom made</strong> using HTML, CSS, and Bootstrap.</strong>
                 </p>
                 <p>
-                Welcome to my web resume! My name is Nikhil and I'm an Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I am currently on my co-op year at Mission Control Space Services in Ottawa, as a Robotics/Software Engineering Co-op Student. I enjoy learning new things, am very adaptable, and have past work experience in formal lab settings. I've worked on numerous deadline-driven design teams in the past, so I've developed the valuable skill of working with others toward a common goal under time pressure. These environments have also led me to develop solid communication and time management skills. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains. <br><br>
+                Welcome to my web resume! My name is Nikhil and I'm an Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I am in my final year of undergraduate studies. I have past experience working in formal robotics lab settings, as well as experience working in the Canadian space industry. In particular, I have had the opportunity to contribute to the BEACON mission, which consists of a small rover that will explore lunar south pole. My research interests are in enabling long-duration autonomy in unstructured environments. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains.  <br><br>
                     
-                This site is intended to serve as a supplement to my resume. It contains information that I simply didn't have enough space to fit in my resume, but that I still feel is important enough to talk about somwehere. Be sure to add me on LinkedIn, and take a look at my GitHub for examples of the public code I've written in the past!
+                This site is intended to serve as a supplement to my resume. It contains information that I didn't have enough space to fit in my resume, but that I still feel is worth talking about somwehere. Feel free to add me on LinkedIn, and take a look at my GitHub for examples of the public code I've written in the past!
                 </p>
                 <br>
                 <p style="text-align: center">
@@ -69,8 +69,9 @@
             Certificate in Artificial Intelligence
             </p>
             <p>
-            <strong>cGPA:</strong> 3.98 / 4.00<br>
+            <strong>cGPA:</strong> 3.97 / 4.00<br>
             Recipent of the Anthony A. Haasz Scholarship
+            Recipient of the Trenwith & Galipeau Aerospace Science Award
             </p>
         </div>
         <div class="row pb-5" id="Work-Exp">
@@ -107,6 +108,16 @@
                     </button>
                 </div>
             </div>
+            <h5 class="exp-title">Mission Control Space Robotics/Software Engineering Co-op Student</h5><br>
+            <h6 class="subtitle">Sept 2024 - Aug 2025</h6><br>
+            <ul class="exp-list">
+                <li>Co-op student at Mission Control in Ottawa for a 1 year work term, developed software on the Missions team</li>
+                <li>Primarily focused on writing ground software for BEACON lunar rover in collaboration with Astrobotic (Griffin-1 payload)</li>
+                <li>Contributed to ground software architecture design, writing software, testing/validation via operations rehearsals for BEACON</li>
+                <li>Designed, implemented, and debugged software tools and algorithms to assist BEACON mission operators</li>
+                <li>Contributed to documentation, proposal writing, and supported outreach activities such as the CSA/MDA Rover Driving Academy</li>
+                <li>Professional moon sweeper</li>
+            </ul>
             <h5 class="exp-title">Autonomous Space Robotics Laboratory (UTIAS) Summer Research Student</h5><br>
             <h6 class="subtitle">May 2023 - Aug 2023</h6><br>
             <ul class="exp-list">
