--- a/resume/index.html
+++ b/resume/index.html
@@ -45,7 +45,7 @@
                 <strong>Welcome to my personal portfolio! This website is <strong class="text-primary">custom made</strong> using HTML, CSS, and Bootstrap.</strong>
                 </p>
                 <p>
-                Welcome to my web resume! My name is Nikhil and I'm an Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I am in my final year of undergraduate studies. I have past experience working in formal robotics lab settings, as well as experience working in the Canadian space industry. In particular, I have had the opportunity to contribute to the BEACON mission, which consists of a small rover that will explore lunar south pole. My research interests are in enabling long-duration autonomy in unstructured environments. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains.  <br><br>
+                Welcome to my web resume! My name is Nikhil and I'm an Engineering Science (Aerospace) student at UofT with a particular passion for the intersection of robotics and aerospace. I am in my final year of undergraduate studies, and have past experience working in formal robotics lab settings, as well as experience working in the Canadian space industry. I have contributed to real and anaologue space missions, primarily to the BEACON mission which will explore the lunar south pole with a small CubeRover. My research interests are in enabling long-duration autonomy in unstructured environments. Robotics and aerospace have been long-term passions of mine, stemming from a childhood love of space exploration, and I'd love to continue getting experience working in those domains.  <br><br>
                     
                 This site is intended to serve as a supplement to my resume. It contains information that I didn't have enough space to fit in my resume, but that I still feel is worth talking about somwehere. Feel free to add me on LinkedIn, and take a look at my GitHub for examples of the public code I've written in the past!
                 </p>
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="col" style="text-align: center">
-                <img src="images/casual_headshot.jpg" class="px-2 pt-5" style="width: 70%"/>
+                <img src="images/izmir_headshot.jpg" class="px-2 pt-5" style="width: 70%"/>
             </div>
         </div>
         <div class="row pb-5" id="Education">
@@ -83,10 +83,11 @@
                     <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="1"></button>
                     <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="2"></button>
                     <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide-to="4"></button>
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/Work-Exp-1.jpg" class="d-block w-100">
+                        <img src="images/Work-Exp-1.png" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
                         <img src="images/Work-Exp-2.jpg" class="d-block w-100">
@@ -96,6 +97,9 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/Work-Exp-4.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Work-Exp-5.jpg" class="d-block w-100">
                     </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#Work-Exp-Indicators" data-bs-slide="prev">
