--- a/resume/index.html
+++ b/resume/index.html
@@ -70,7 +70,7 @@
             </p>
             <p>
             <strong>cGPA:</strong> 3.97 / 4.00<br>
-            Recipent of the Anthony A. Haasz Scholarship
+            Recipent of the Anthony A. Haasz Scholarship<br>
             Recipient of the Trenwith & Galipeau Aerospace Science Award
             </p>
         </div>
